# fin_qwen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
fin/: __init__.py
fin/_f5c/: Makefile.python
fin/bindings/: __init__.py  _eventalign.cpp  utils.cpp
fin/core/: __init__.py  eventalign.py
fin/tests/: test_eventalign_cpu.py  test_eventalign_gpu.py  test_gpu_detection.py
