[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=2.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fin"
version = "0.1.0"
description = "Python bindings for f5c nanopore event alignment with CPU/GPU acceleration"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pybind11>=2.6.0",
    "numpy>=1.19.0",
    "pandas>=1.0.0",
    "h5py>=2.10.0",
]

[project.optional-dependencies]
gpu = ["cupy>=8.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/fin"
Repository = "https://github.com/yourusername/fin"

[tool.setuptools]
packages = ["fin", "fin.core", "fin.bindings", "fin.tests"]

[tool.setuptools.package-data]
fin = ["_f5c/*.so", "_f5c/*.dylib", "_f5c/*.dll"]